<resources>
    <string name="app_name">AuthenticationLoginRegister</string>
    <string name="aurelo">Aurelo</string>
    <string name="phone">Phone</string>
    <string name="e_mail">E-Mail</string>
    <string name="already_registered_login_here">Already Registered? Login Here</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="create_a_new_user">Create a New User</string>
    <string name="password">Password</string>
</resources>